--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 
   <body>
     <!-- Шапка сторінки -->
-    <header class="topbar">
+    <!-- <header class="topbar">
       <div class="container topbar-flex">
         <nav class="topbar-navigation">
-          <!-- Логотип -->
           <a href="./index.html" class="logo link-options"
             ><span class="logo__web">Web</span
             ><span class="logo__studio-dark">Studio</span></a
           >
-          <!-- Навігація по сторінці -->
           <ul class="topbar-navigation__list">
             <li class="topbar-navigation__group">
               <a
@@ -81,11 +79,10 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-- Основний контент сторінки -->
     <main>
-      <!-- Головний банер -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <div class="hero-button">
@@ -96,7 +93,6 @@
             >
               Замовити послугу
             </button>
-            <!-- Приховане вікно з формою -->
             <div class="backdrop is-hidden" data-modal>
               <div class="modal-window">
                 <button type="button" class="close-button" data-modal-close>
@@ -211,7 +207,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Текст під банером -->
       <section class="our-features">
@@ -276,7 +272,7 @@
       </section>
 
       <!--  Чим займаємося -->
-      <section class="img-section section">
+      <!-- <section class="img-section section">
         <div class="container img-container">
           <h2 class="img-section-title">Чим займаємося</h2>
           <ul class="img-section__group">
@@ -318,10 +314,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Наша команда -->
-      <section class="our-team section">
+      <!-- <section class="our-team section">
         <div class="container our-team-container">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-group">
@@ -579,11 +575,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Постійні клієнти -->
-    <section class="partners section">
+    <!-- <section class="partners section">
       <div class="container">
         <h2 class="partners-title">Постійні клієнти</h2>
         <ul class="partners__list">
@@ -661,10 +657,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
     <!-- Підвал сторінки -->
-    <footer class="basement">
+    <!-- <footer class="basement">
       <div class="container basement-container">
         <div class="basement-con">
           <a href="./index.html" class="logo link-options logo-basement"
@@ -779,7 +775,7 @@
           </div>
         </form>
       </div>
-    </footer>
+    </footer> -->
 
     <script src="./js/modal.js"></script>
   </body>
