our team moobile

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       </section> -->
 
       <!-- Наша команда -->
-      <!-- <section class="our-team section">
+      <section class="our-team section">
         <div class="container our-team-container">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-group">
@@ -575,7 +575,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Постійні клієнти -->
