our-features mobile

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </section>
 
       <!--  Чим займаємося -->
-      <!-- <section class="img-section section">
+      <section class="img-section section">
         <div class="container img-container">
           <h2 class="img-section-title">Чим займаємося</h2>
           <ul class="img-section__group">
@@ -314,7 +314,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Наша команда -->
       <section class="our-team section">
