--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     </main>
 
     <!-- Постійні клієнти -->
-    <!-- <section class="partners section">
+    <section class="partners section">
       <div class="container">
         <h2 class="partners-title">Постійні клієнти</h2>
         <ul class="partners__list">
@@ -657,7 +657,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
     <!-- Підвал сторінки -->
     <!-- <footer class="basement">
