portfolio main mobile

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header> -->
     <!-- Основний контент сторінки -->
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <div class="hero-button">
@@ -207,7 +207,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- Текст під банером -->
       <section class="our-features">
@@ -660,7 +660,7 @@
     </section>
 
     <!-- Підвал сторінки -->
-    <!-- <footer class="basement">
+    <footer class="basement">
       <div class="container basement-container">
         <div class="basement-con">
           <a href="./index.html" class="logo link-options logo-basement"
@@ -775,7 +775,7 @@
           </div>
         </form>
       </div>
-    </footer> -->
+    </footer>
 
     <script src="./js/modal.js"></script>
   </body>
