font mobile update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <!-- Шапка сторінки -->
-    <!-- <header class="topbar">
+    <header class="topbar">
       <div class="container topbar-flex">
         <nav class="topbar-navigation">
           <a href="./index.html" class="logo link-options"
@@ -79,7 +79,7 @@
           </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <!-- Основний контент сторінки -->
     <main>
       <section class="hero">
