--- a/index.html
+++ b/index.html
@@ -322,13 +322,34 @@
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-group">
             <li class="our-team-group__list">
-              <img
-                src="images/pic-0.jpeg"
-                alt="Ігор Дем'яненко"
-                width="270"
-                height="260"
-                class="our-team-group__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
+                  media="(min-width 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-0-tablet-1x.jpeg 1x,
+                    ./images/pic-0-tablet-2x.jpeg 2x
+                  "
+                  media="(min-width 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-0-mobile-1x.jpeg 1x,
+                    ./images/pic-0-mobile-2x.jpeg 2x
+                  "
+                  media="(max-width 767px)"
+                />
+                <img
+                  srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
+                  src="images/pic-0.jpeg"
+                  alt="Ігор Дем'яненко"
+                  width="460"
+                  height="450"
+                  class="our-team-group__img"
+                />
+              </picture>
               <div class="our-team__img-text">
                 <h3 class="our-team__subtitle">Ігор Дем'яненко</h3>
                 <p class="our-team__text">Product Designer</p>
@@ -385,13 +406,35 @@
               </div>
             </li>
             <li class="our-team-group__list">
-              <img
-                src="images/pic-1.jpeg"
-                alt="Ольга Рєпіна"
-                width="270"
-                height="260"
-                class="our-team-group__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
+                  media="(min-width 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-1-tablet-1x.jpeg 1x,
+                    ./images/pic-1-tablet-2x.jpeg 2x
+                  "
+                  media="(min-width 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-1-mobile-1x.jpeg 1x,
+                    ./images/pic-1-mobile-2x.jpeg 2x
+                  "
+                  media="(max-width 767px)"
+                />
+                <img
+                  srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
+                  src="images/pic-1.jpeg"
+                  alt="Ольга Рєпіна"
+                  width="460"
+                  height="450"
+                  class="our-team-group__img"
+                />
+              </picture>
+
               <div class="our-team__img-text">
                 <h3 class="our-team__subtitle">Ольга Рєпіна</h3>
                 <p class="our-team__text">Frontend Developer</p>
@@ -448,13 +491,34 @@
               </div>
             </li>
             <li class="our-team-group__list">
-              <img
-                src="images/pic-2.jpeg"
-                alt="Микола Тарасов"
-                width="270"
-                height="260"
-                class="our-team-group__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
+                  media="(min-width 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-2-tablet-1x.jpeg 1x,
+                    ./images/pic-2-tablet-2x.jpeg 2x
+                  "
+                  media="(min-width 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-2-mobile-1x.jpeg 1x,
+                    ./images/pic-2-mobile-2x.jpeg 2x
+                  "
+                  media="(max-width 767px)"
+                />
+                <img
+                  srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
+                  src="images/pic-2.jpeg"
+                  alt="Микола Тарасов"
+                  width="460"
+                  height="450"
+                  class="our-team-group__img"
+                />
+              </picture>
               <div class="our-team__img-text">
                 <h3 class="our-team__subtitle">Микола Тарасов</h3>
                 <p class="our-team__text">Marketing</p>
@@ -511,13 +575,34 @@
               </div>
             </li>
             <li class="our-team-group__list">
-              <img
-                src="images/pic-3.jpeg"
-                alt="Михайло Єрмаков"
-                width="270"
-                height="260"
-                class="our-team-group__img"
-              />
+              <picture>
+                <source
+                  srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
+                  media="(min-width 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-3-tablet-1x.jpeg 1x,
+                    ./images/pic-3-tablet-2x.jpeg 2x
+                  "
+                  media="(min-width 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/pic-3-mobile-1x.jpeg 1x,
+                    ./images/pic-3-mobile-2x.jpeg 2x
+                  "
+                  media="(max-width 767px)"
+                />
+                <img
+                  srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
+                  src="images/pic-3.jpeg"
+                  alt="Михайло Єрмаков"
+                  width="460"
+                  height="450"
+                  class="our-team-group__img"
+                />
+              </picture>
               <div class="our-team__img-text">
                 <h3 class="our-team__subtitle">Михайло Єрмаков</h3>
                 <p class="our-team__text">UI Designer</p>
@@ -584,10 +669,7 @@
         <h2 class="partners-title">Постійні клієнти</h2>
         <ul class="partners__list">
           <li class="partners__item">
-            <a
-              href="#"
-              class="link-options partners__link hover-transition"
-            >
+            <a href="#" class="link-options partners__link hover-transition">
               <svg class="partners__icon" width="106" height="60">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-client-logo-1"
@@ -596,10 +678,7 @@
             </a>
           </li>
           <li class="partners__item">
-            <a
-              href="#"
-              class="link-options partners__link hover-transition"
-            >
+            <a href="#" class="link-options partners__link hover-transition">
               <svg class="partners__icon" width="106" height="60">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-client-logo-2"
@@ -608,10 +687,7 @@
             </a>
           </li>
           <li class="partners__item">
-            <a
-              href="#"
-              class="link-options partners__link hover-transition"
-            >
+            <a href="#" class="link-options partners__link hover-transition">
               <svg class="partners__icon" width="106" height="60">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-client-logo-3"
@@ -620,10 +696,7 @@
             </a>
           </li>
           <li class="partners__item">
-            <a
-              href="#"
-              class="link-options partners__link hover-transition"
-            >
+            <a href="#" class="link-options partners__link hover-transition">
               <svg class="partners__icon" width="106" height="60">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-client-logo-4"
@@ -632,10 +705,7 @@
             </a>
           </li>
           <li class="partners__item">
-            <a
-              href="#"
-              class="link-options partners__link hover-transition"
-            >
+            <a href="#" class="link-options partners__link hover-transition">
               <svg class="partners__icon" width="106" height="60">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-client-logo-5"
@@ -644,10 +714,7 @@
             </a>
           </li>
           <li class="partners__item">
-            <a
-              href="#"
-              class="link-options partners__link hover-transition"
-            >
+            <a href="#" class="link-options partners__link hover-transition">
               <svg class="partners__icon" width="106" height="60">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-client-logo-6"
@@ -660,7 +727,7 @@
     </section>
 
     <!-- Підвал сторінки -->
-    <footer class="basement ">
+    <footer class="basement">
       <div class="container basement-container">
         <div class="basement-con">
           <a href="./index.html" class="logo link-options logo-basement"
