mobile menu start

--- a/index.html
+++ b/index.html
@@ -78,6 +78,57 @@
             >
           </li>
         </ul>
+        <button type="button" class="mobile-menu-btn">
+          <svg class="modal-icon" width="18" height="18">
+            <use href="./images/icomoon/symbol-defs.svg#icon-mobile-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mobile-menu">
+        <button type="button" class="mobile-menu-close">
+          <svg class="modal-icon" width="18" height="18">
+            <use href="./images/icomoon/symbol-defs.svg#icon-close-btn"></use>
+          </svg>
+        </button>
+        <ul class="mobile-nav__list">
+          <li class="mobile-nav__group">
+            <a
+              href="./index.html"
+              class="link-options mobile-nav__link hover-transition active-mobile"
+              >Студія</a
+            >
+          </li>
+          <li class="mobile-nav__group">
+            <a
+              href="./portfolio.html"
+              class="link-options mobile-nav__link hover-transition"
+              >Портфоліо</a
+            >
+          </li>
+          <li class="mobile-nav__group">
+            <a href="#" class="link-options mobile-nav__link hover-transition"
+              >Контакти</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-contacts__list">
+          <li class="mobile-contacts__group">
+            <a
+              href="mailto:info@devstudio.com"
+              class="link-options mobile-contacts__link hover-transition"
+            >
+              info@devstudio.com</a
+            >
+          </li>
+          <li class="mobile-contacts__group">
+            <a
+              href="tel:+380961111111"
+              class="link-options mobile-contacts__link hover-transition"
+            >
+              +38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <!-- Основний контент сторінки -->
