--- a/index.html
+++ b/index.html
@@ -78,14 +78,22 @@
             >
           </li>
         </ul>
-        <button type="button" class="mobile-menu-btn">
+        <button
+          type="button"
+          class="mobile-menu-btn hover-transition"
+          data-modal-open
+        >
           <svg class="modal-icon" width="18" height="18">
             <use href="./images/icomoon/symbol-defs.svg#icon-mobile-menu"></use>
           </svg>
         </button>
       </div>
-      <div class="mobile-menu">
-        <button type="button" class="mobile-menu-close">
+      <div class="mobile-menu is-hidden" data-modal>
+        <button
+          type="button"
+          class="mobile-menu-close hover-transition"
+          data-modal-close
+        >
           <svg class="modal-icon" width="18" height="18">
             <use href="./images/icomoon/symbol-defs.svg#icon-close-btn"></use>
           </svg>
@@ -114,18 +122,56 @@
         <ul class="mobile-contacts__list">
           <li class="mobile-contacts__group">
             <a
-              href="mailto:info@devstudio.com"
-              class="link-options mobile-contacts__link hover-transition"
+              href="tel:+380961111111"
+              class="link-options mobile-contacts__tel hover-transition"
             >
-              info@devstudio.com</a
+              +38 096 111 11 11</a
             >
           </li>
           <li class="mobile-contacts__group">
             <a
-              href="tel:+380961111111"
-              class="link-options mobile-contacts__link hover-transition"
+              href="mailto:info@devstudio.com"
+              class="link-options mobile-contacts__mail hover-transition"
             >
-              +38 096 111 11 11</a
+              info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-social">
+          <li class="mobile-social__item">
+            <a
+              href="#"
+              class="link-options mobile-social__link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Instagram</a
+            >
+          </li>
+          <li class="mobile-social__item">
+            <a
+              href="#"
+              class="link-options mobile-social__link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Twitter</a
+            >
+          </li>
+          <li class="mobile-social__item">
+            <a
+              href="#"
+              class="link-options mobile-social__link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >Facebook</a
+            >
+          </li>
+          <li class="mobile-social__item">
+            <a
+              href="#"
+              class="link-options mobile-social__link"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >LinkedIn</a
             >
           </li>
         </ul>
