hover mobile menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu is-hidden" data-Menu>
+      <div class="mobile-menu is-hidden hover-transition" data-Menu>
         <button
           type="button"
           class="mobile-menu-close hover-transition"
