update after mentor corection

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           class="mobile-menu-btn hover-transition"
           data-Menu-open
         >
-          <svg class="modal-icon" width="18" height="18">
+          <svg class="modal-icon" width="40" height="40">
             <use href="./images/icomoon/symbol-defs.svg#icon-mobile-menu"></use>
           </svg>
         </button>
@@ -94,7 +94,7 @@
           class="mobile-menu-close hover-transition"
           data-Menu-close
         >
-          <svg class="modal-icon" width="18" height="18">
+          <svg class="modal-icon" width="40" height="40">
             <use href="./images/icomoon/symbol-defs.svg#icon-close-btn"></use>
           </svg>
         </button>
@@ -425,8 +425,12 @@
             <li class="our-team-group__list">
               <picture>
                 <source
-                  srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  srcset="
+                    ./images/pic-0-mobile-1x.jpeg 1x,
+                    ./images/pic-0-mobile-2x.jpeg 2x
+                  "
+                  media="(mix-width 480px)"
+                  sizes="(min-width: 480px) 480px, 100vw "
                 />
                 <source
                   srcset="
@@ -436,11 +440,8 @@
                   media="(min-width 768px)"
                 />
                 <source
-                  srcset="
-                    ./images/pic-0-mobile-1x.jpeg 1x,
-                    ./images/pic-0-mobile-2x.jpeg 2x
-                  "
-                  media="(max-width 767px)"
+                  srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
+                  media="(min-width 1200px)"
                 />
                 <img
                   srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
@@ -509,8 +510,11 @@
             <li class="our-team-group__list">
               <picture>
                 <source
-                  srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  srcset="
+                    ./images/pic-1-mobile-1x.jpeg 1x,
+                    ./images/pic-1-mobile-2x.jpeg 2x
+                  "
+                  media="(mix-width 480px)"
                 />
                 <source
                   srcset="
@@ -520,11 +524,8 @@
                   media="(min-width 768px)"
                 />
                 <source
-                  srcset="
-                    ./images/pic-1-mobile-1x.jpeg 1x,
-                    ./images/pic-1-mobile-2x.jpeg 2x
-                  "
-                  media="(max-width 767px)"
+                  srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
+                  media="(min-width 1200px)"
                 />
                 <img
                   srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
@@ -594,8 +595,11 @@
             <li class="our-team-group__list">
               <picture>
                 <source
-                  srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  srcset="
+                    ./images/pic-2-mobile-1x.jpeg 1x,
+                    ./images/pic-2-mobile-2x.jpeg 2x
+                  "
+                  media="(min-width 480px)"
                 />
                 <source
                   srcset="
@@ -605,11 +609,8 @@
                   media="(min-width 768px)"
                 />
                 <source
-                  srcset="
-                    ./images/pic-2-mobile-1x.jpeg 1x,
-                    ./images/pic-2-mobile-2x.jpeg 2x
-                  "
-                  media="(max-width 767px)"
+                  srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
+                  media="(min-width 1200px)"
                 />
                 <img
                   srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
@@ -678,8 +679,11 @@
             <li class="our-team-group__list">
               <picture>
                 <source
-                  srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  srcset="
+                    ./images/pic-3-mobile-1x.jpeg 1x,
+                    ./images/pic-3-mobile-2x.jpeg 2x
+                  "
+                  media="(min-width 480px)"
                 />
                 <source
                   srcset="
@@ -689,11 +693,8 @@
                   media="(min-width 768px)"
                 />
                 <source
-                  srcset="
-                    ./images/pic-3-mobile-1x.jpeg 1x,
-                    ./images/pic-3-mobile-2x.jpeg 2x
-                  "
-                  media="(max-width 767px)"
+                  srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
+                  media="(min-width 1200px)"
                 />
                 <img
                   srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
