--- a/index.html
+++ b/index.html
@@ -429,19 +429,18 @@
                     ./images/pic-0-mobile-1x.jpeg 1x,
                     ./images/pic-0-mobile-2x.jpeg 2x
                   "
-                  media="(mix-width 480px)"
-                  sizes="(min-width: 480px) 480px, 100vw "
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
                     ./images/pic-0-tablet-1x.jpeg 1x,
                     ./images/pic-0-tablet-2x.jpeg 2x
                   "
-                  media="(min-width 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   srcset="./images/pic-0.jpeg 1x, ./images/pic-0-2x.jpeg 2x"
@@ -514,18 +513,18 @@
                     ./images/pic-1-mobile-1x.jpeg 1x,
                     ./images/pic-1-mobile-2x.jpeg 2x
                   "
-                  media="(mix-width 480px)"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
                     ./images/pic-1-tablet-1x.jpeg 1x,
                     ./images/pic-1-tablet-2x.jpeg 2x
                   "
-                  media="(min-width 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   srcset="./images/pic-1.jpeg 1x, ./images/pic-1-2x.jpeg 2x"
@@ -599,18 +598,18 @@
                     ./images/pic-2-mobile-1x.jpeg 1x,
                     ./images/pic-2-mobile-2x.jpeg 2x
                   "
-                  media="(min-width 480px)"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
                     ./images/pic-2-tablet-1x.jpeg 1x,
                     ./images/pic-2-tablet-2x.jpeg 2x
                   "
-                  media="(min-width 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   srcset="./images/pic-2.jpeg 1x, ./images/pic-2-2x.jpeg 2x"
@@ -683,18 +682,18 @@
                     ./images/pic-3-mobile-1x.jpeg 1x,
                     ./images/pic-3-mobile-2x.jpeg 2x
                   "
-                  media="(min-width 480px)"
+                  media="(max-width: 767px)"
                 />
                 <source
                   srcset="
                     ./images/pic-3-tablet-1x.jpeg 1x,
                     ./images/pic-3-tablet-2x.jpeg 2x
                   "
-                  media="(min-width 768px)"
+                  media="(min-width: 768px)"
                 />
                 <source
                   srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
-                  media="(min-width 1200px)"
+                  media="(min-width: 1200px)"
                 />
                 <img
                   srcset="./images/pic-3.jpeg 1x, ./images/pic-3-2x.jpeg 2x"
